# RealEstateAgent-Multi-Agent-Research-System-for-Cited-Property-Intelligence

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: __init__.py  main.py  ui.py
app/agents/: __init__.py  analyst.py  fact_checker.py  retriever.py  supervisor.py
app/api/: deps.py  routes.py
app/core/: __init__.py  config.py  logging.py  observability.py
app/evaluation/: __init__.py  dataset.py  final_runner.py  finalize.py  ragas_runner.py  runner.py
app/graph/: __init__.py  workflow.py
app/ingestion/: __init__.py  generator.py  loader.py  pipeline.py
app/retrieval/: __init__.py  bm25_store.py  chunking.py  dense_store.py  embeddings.py  fusion.py  rerankers.py  service.py
app/schemas/: agent.py  api.py  data.py  evaluation.py  retrieval.py  state.py
app/tools/: __init__.py  comparison.py  finance.py
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  evaluation_report.md
reports/: corpus_stats.json  corpus_stats.md  evaluation_summary.md  resume_claim_support.md  validated_claims.md
reports/final/: comparison_table.csv  corpus_stats.json  evaluation_summary.json  final_report.md  finalization_manifest.json  latency_summary.json  resume_claim_support.md  validated_claims.md
scripts/: compare_configs.py  evaluate.py  finalize_results.py  generate_sample_data.py  ingest.py  run_api.py
tests/: test_chunking.py  test_citation_mapping.py  test_dataset_builder.py  test_fact_checker.py  test_project_summaries.py  test_resume_claims.py  test_retrieval_debug.py  test_retrieval_fusion.py
