[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "realestate-agent"
version = "0.1.0"
description = "Production-minded LangGraph multi-agent real estate research system with hybrid retrieval, fact-checking, and evaluation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "RealEstate Agent Team" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "orjson>=3.10.7",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "pandas>=2.2.2",
  "rank-bm25>=0.2.2",
  "scikit-learn>=1.5.1",
  "tenacity>=8.5.0",
  "langchain>=0.3.0",
  "langgraph>=0.2.14",
  "langchain-openai>=0.2.0",
  "langsmith>=0.1.106",
  "pinecone>=5.4.2",
  "cohere>=5.8.1",
  "ragas>=0.2.8",
  "datasets>=2.20.0",
  "streamlit>=1.37.1",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.2",
  "mypy>=1.11.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

